whackamole. fixed homepage greeting spacing

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ body {
 }
 
 .greeting {
-  margin-top: 20px;
   animation-duration: 3s;
   animation-name: slidein;
 }
